Libidn NEWS -- History of user-visible changes.                 -*- outline -*-
Copyright (C) 2002-2012 Simon Josefsson
See the end for copying conditions.

* Version 1.24 (unreleased) [?]

** Libraries are re-licensed from LGPLv2+ to dual-GPLv2+|LGPLv3+.

** build: Fix parallel Windows builds.
Reported by René Berber <r.berber@computer.org>.

** Sync glib NFKC code and improve copyright/license statements.

** Update gnulib files and translations.

** API and ABI is backwards compatible with the previous version.

* Version 1.23 (released 2011-11-25) [stable]

** stringprep.h: Now #include's sys/types.h instead of unistd.h for ssize_t.
Some systems (e.g., Mingw with MSVC 9) does not have unistd.h.

** idn-free.h: Protect prototypes with 'extern "C"' marker.
Reported by Bittner Ede <bittner.ede@euronetrt.hu>.

** doc: Update link to experimental TLD tables.
The new link is <https://github.com/gnuthor/tldchk>.

** Update gnulib files and translations.

** QA: Improved cyclo output.  Update GTK-DOC files.  Various bugfixes.

** API and ABI is backwards compatible with the previous version.

* Version 1.22 (released 2011-05-04) [stable]

** libidn: Add -liconv as static library requirement in libidn.pc, for MinGW.
Reported by Volker Grabsch <vog@notjusthosting.com>.

** libidn: Fix memory leak in idna_to_ascii_4z when idna_to_ascii_4i fails.
Reported by and tiny patch from Olga Limburg <olimburg@gmail.com>.

** libidn: Ran clang-analyze on the code.
Fixed some dead assignments/initializations.

** build: Really distribute win32/libidn4win.mk.

** API and ABI is backwards compatible with the previous version.

* Version 1.21 (released 2011-04-24) [stable]

** build/gettext: Demand gettext >= 0.18.1 in order to get newer M4 files.
The old M4 files associated with 0.17 caused problems on Solaris,
hopefully now fixed.  Reported by Dagobert Michelsen <dam@opencsw.org>
in <http://thread.gmane.org/gmane.comp.lib.gnulib.bugs/25522>.
