@@ -101,6 +101,7 @@ Volker Grabsch <vog@notjusthosting.com>
 Olga Limburg <olimburg@gmail.com>
 Bittner Ede <bittner.ede@euronetrt.hu>
 René Berber <r.berber@computer.org>
+Jon Nelson <jnelson@jamponi.net>
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
