@@ -79,7 +79,13 @@ static const struct tv tv[] = {
    "Not a problem sequence 5",
    3,
    {0x1100, 0x00AA, 0x1161, 0},
-   PR29_SUCCESS}
+   PR29_SUCCESS},
+  {
+    /* http://lists.gnu.org/archive/html/help-libidn/2012-01/msg00008.html */
+    "Infloop",
+    3,
+    {0x1100, 0x0300, 0x4711, 0},
+    PR29_SUCCESS}
 };
 
 void
